--- a/index.html
+++ b/index.html
@@ -8,73 +8,58 @@
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.min.css">
-    <title>Rakam, inc.</title>
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-
+    <title>Rakam,
+        inc.</title>
+    <script>document.addEventListener('DOMContentLoaded', () => {
             // Get all "navbar-burger" elements
-            const $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
-
-            // Check if there are any navbar burgers
+            const $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0); // Check if there are any navbar burgers
             if ($navbarBurgers.length > 0) {
-
                 // Add a click event on each of them
                 $navbarBurgers.forEach(el => {
                     el.addEventListener('click', () => {
-
                         // Get the target from the "data-target" attribute
                         const target = el.dataset.target;
-                        const $target = document.getElementById(target);
-
-                        // Toggle the "is-active" class on both the "navbar-burger" and the "navbar-menu"
+                        const $target = document.getElementById(target); // Toggle the "is-active" class on both the "navbar-burger" and the "navbar-menu"
                         el.classList.toggle('is-active');
                         $target.classList.toggle('is-active');
-
-                    });
-                });
+                    }
+                    );
+                }
+                );
             }
+        }
 
-        });
+        );
     </script>
 </head>
 
 <body>
     <div class="header">
         <nav class="navbar" role="navigation" aria-label="main navigation">
-            <div class="navbar-brand">
-                <a class="navbar-item" href="https://bulma.io">
-                    <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
-                </a>
-
-                <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
-                    data-target="navbarBasicExample">
-                    <span aria-hidden="true"></span>
-                    <span aria-hidden="true"></span>
-                    <span aria-hidden="true"></span>
-                </a>
-            </div>
-
+            <div class="navbar-brand"><a class="navbar-item" href="https://bulma.io"><img
+                        src="https://bulma.io/images/bulma-logo.png" width="112" height="28"></a><a role="button"
+                    class="navbar-burger burger" aria-label="menu" aria-expanded="false"
+                    data-target="navbarBasicExample"><span aria-hidden="true"></span><span
+                        aria-hidden="true"></span><span aria-hidden="true"></span></a></div>
             <div id="navbarBasicExample" class="navbar-menu">
                 <div class="navbar-start">
-                    <!-- if you want, write here navbar left items -->
+                    <!-- WRITE HERE: Left navigation Item -->
                 </div>
                 <div class="navbar-end">
                     <div class="navbar-item">
-                        <div class="buttons">
-                            <a class="navbar-item" href="#mission">mission</a>
-                            <a class="navbar-item" href="#service">service</a>
-                            <a class="navbar-item" href="#members">members</a>
-                            <a class="navbar-item" href="#contact">contact</a>
-                        </div>
+                        <div class="buttons"><a class="navbar-item" href="#mission">mission</a><a class="navbar-item"
+                                href="#service">service</a><a class="navbar-item" href="#members">members</a><a
+                                class="navbar-item" href="#contact">contact</a></div>
                     </div>
                 </div>
             </div>
         </nav>
-        <section class="hero is-link is-fullheight-with-navbar">
+        <section class="hero is-fullheight-with-navbar">
             <div class="hero-body">
                 <div class="container">
-                    <p class="title">
-                        Fullheight hero with navbar
+                    <p class="title has-text-white is-size-1 has-text-centered">
+                        <!-- WRITE HERE: Catch Copy -->
+                        There must be something that only I can do
                     </p>
                 </div>
             </div>
@@ -82,116 +67,69 @@
     </div>
     <div class="main">
         <div id="mission">
-            <h1>mission</h1>
+            <p class="section-title">mission</p>
         </div>
         <div class="items">
             <div id="service">
-                <h1>service</h1>
+                <p class="section-title">service</p>
             </div>
             <div id="members">
-                <h1>members</h1>
+                <p class="section-title">members</p>
                 <div class="member-item">
                     <div class="member"></div>
                     <div class="member"></div>
                 </div>
             </div>
             <div id="contact">
-                <h1>contact us</h1>
-                <div class="field">
-                    <label class="label">Name</label>
-                    <div class="control">
-                        <input class="input" type="text" placeholder="Text input">
-                    </div>
+                <p class="section-title">contact us</p>
+                <div class="field"><label class="label">Name</label>
+                    <div class="control"><input class="input" type="text" placeholder="Text input"></div>
                 </div>
-
-                <div class="field">
-                    <label class="label">Username</label>
-                    <div class="control has-icons-left has-icons-right">
-                        <input class="input is-success" type="text" placeholder="Text input" value="bulma">
-                        <span class="icon is-small is-left">
-                            <i class="fas fa-user"></i>
-                        </span>
-                        <span class="icon is-small is-right">
-                            <i class="fas fa-check"></i>
-                        </span>
-                    </div>
+                <div class="field"><label class="label">Username</label>
+                    <div class="control has-icons-left has-icons-right"><input class="input is-success" type="text"
+                            placeholder="Text input" value="bulma"><span class="icon is-small is-left"><i
+                                class="fas fa-user"></i></span><span class="icon is-small is-right"><i
+                                class="fas fa-check"></i></span></div>
                     <p class="help is-success">This username is available</p>
                 </div>
-
-                <div class="field">
-                    <label class="label">Email</label>
-                    <div class="control has-icons-left has-icons-right">
-                        <input class="input is-danger" type="email" placeholder="Email input" value="hello@">
-                        <span class="icon is-small is-left">
-                            <i class="fas fa-envelope"></i>
-                        </span>
-                        <span class="icon is-small is-right">
-                            <i class="fas fa-exclamation-triangle"></i>
-                        </span>
-                    </div>
+                <div class="field"><label class="label">Email</label>
+                    <div class="control has-icons-left has-icons-right"><input class="input is-danger" type="email"
+                            placeholder="Email input" value="hello@"><span class="icon is-small is-left"><i
+                                class="fas fa-envelope"></i></span><span class="icon is-small is-right"><i
+                                class="fas fa-exclamation-triangle"></i></span></div>
                     <p class="help is-danger">This email is invalid</p>
                 </div>
-
-                <div class="field">
-                    <label class="label">Subject</label>
+                <div class="field"><label class="label">Subject</label>
                     <div class="control">
-                        <div class="select">
-                            <select>
+                        <div class="select"><select>
                                 <option>Select dropdown</option>
                                 <option>With options</option>
-                            </select>
-                        </div>
+                            </select></div>
                     </div>
                 </div>
-
+                <div class="field"><label class="label">Message</label>
+                    <div class="control"><textarea class="textarea" placeholder="Textarea"></textarea></div>
+                </div>
                 <div class="field">
-                    <label class="label">Message</label>
-                    <div class="control">
-                        <textarea class="textarea" placeholder="Textarea"></textarea>
-                    </div>
+                    <div class="control"><label class="checkbox"><input type="checkbox">I agree to the <a href="#">terms
+                                and conditions</a></label></div>
                 </div>
-
                 <div class="field">
-                    <div class="control">
-                        <label class="checkbox">
-                            <input type="checkbox">
-                            I agree to the <a href="#">terms and conditions</a>
-                        </label>
-                    </div>
+                    <div class="control"><label class="radio"><input type="radio" name="question">Yes </label><label
+                            class="radio"><input type="radio" name="question">No </label></div>
                 </div>
-
-                <div class="field">
-                    <div class="control">
-                        <label class="radio">
-                            <input type="radio" name="question">
-                            Yes
-                        </label>
-                        <label class="radio">
-                            <input type="radio" name="question">
-                            No
-                        </label>
-                    </div>
-                </div>
-
                 <div class="field is-grouped">
-                    <div class="control">
-                        <button class="button is-link">Submit</button>
-                    </div>
-                    <div class="control">
-                        <button class="button is-text">Cancel</button>
-                    </div>
+                    <div class="control"><button class="button is-link">Submit</button></div>
+                    <div class="control"><button class="button is-text">Cancel</button></div>
                 </div>
             </div>
         </div>
-
     </div>
     <div class="footer">
         <div class="content has-text-centered">
-            <p>
-                <strong>Bulma</strong> by <a href="https://jgthms.com">Jeremy Thomas</a>. The source code is licensed
-                <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
-                is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
-            </p>
+            <p><strong>Bulma</strong>by <a href="https://jgthms.com">Jeremy Thomas</a>. The source code is licensed
+                <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content is licensed <a
+                    href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>. </p>
         </div>
     </div>
 </body>
