--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 <body>
     <div class="header">
         <nav class="navbar" role="navigation" aria-label="main navigation">
-            <div class="navbar-brand"><a class="navbar-item" href="https://bulma.io"><img
-                        src="https://bulma.io/images/bulma-logo.png" width="112" height="28"></a><a role="button"
+            <div class="navbar-brand"><a class="navbar-item" href=""><img
+                        src="./assets/rakam.png" ></a><a role="button"
                     class="navbar-burger burger" aria-label="menu" aria-expanded="false"
                     data-target="navbarBasicExample"><span aria-hidden="true"></span><span
                         aria-hidden="true"></span><span aria-hidden="true"></span></a></div>
@@ -68,10 +68,12 @@
     <div class="main">
         <div id="mission">
             <p class="section-title">mission</p>
+            <p class="slogan"><b>若者の力で日本を熱く</b></p>
         </div>
         <div class="items">
             <div id="service">
                 <p class="section-title">service</p>
+                <div class="product">comming soon...</div>
             </div>
             <div id="members">
                 <p class="section-title">members</p>
@@ -83,53 +85,27 @@
             <div id="contact">
                 <p class="section-title">contact us</p>
                 <div class="field"><label class="label">Name</label>
-                    <div class="control"><input class="input" type="text" placeholder="Text input"></div>
-                </div>
-                <div class="field"><label class="label">Username</label>
-                    <div class="control has-icons-left has-icons-right"><input class="input is-success" type="text"
-                            placeholder="Text input" value="bulma"><span class="icon is-small is-left"><i
-                                class="fas fa-user"></i></span><span class="icon is-small is-right"><i
-                                class="fas fa-check"></i></span></div>
-                    <p class="help is-success">This username is available</p>
+                    <div class="control"><input class="input" type="text" placeholder="例)山田 太郎"></div>
                 </div>
                 <div class="field"><label class="label">Email</label>
-                    <div class="control has-icons-left has-icons-right"><input class="input is-danger" type="email"
-                            placeholder="Email input" value="hello@"><span class="icon is-small is-left"><i
-                                class="fas fa-envelope"></i></span><span class="icon is-small is-right"><i
-                                class="fas fa-exclamation-triangle"></i></span></div>
-                    <p class="help is-danger">This email is invalid</p>
-                </div>
-                <div class="field"><label class="label">Subject</label>
-                    <div class="control">
-                        <div class="select"><select>
-                                <option>Select dropdown</option>
-                                <option>With options</option>
-                            </select></div>
+                    <div class="control has-icons-left has-icons-right"><input class="input" type="email"
+                            placeholder="例) example@gmail.com"><span class="icon is-small is-left"><i
+                                class="fas fa-envelope"></i></span><span class="icon is-small is-right"></span>
                     </div>
                 </div>
                 <div class="field"><label class="label">Message</label>
                     <div class="control"><textarea class="textarea" placeholder="Textarea"></textarea></div>
                 </div>
-                <div class="field">
-                    <div class="control"><label class="checkbox"><input type="checkbox">I agree to the <a href="#">terms
-                                and conditions</a></label></div>
-                </div>
-                <div class="field">
-                    <div class="control"><label class="radio"><input type="radio" name="question">Yes </label><label
-                            class="radio"><input type="radio" name="question">No </label></div>
-                </div>
+                
                 <div class="field is-grouped">
                     <div class="control"><button class="button is-link">Submit</button></div>
-                    <div class="control"><button class="button is-text">Cancel</button></div>
                 </div>
             </div>
         </div>
     </div>
     <div class="footer">
         <div class="content has-text-centered">
-            <p><strong>Bulma</strong>by <a href="https://jgthms.com">Jeremy Thomas</a>. The source code is licensed
-                <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content is licensed <a
-                    href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>. </p>
+            <p>Powered by Rakam inc.</p>
         </div>
     </div>
 </body>
