--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="container">
                     <p class="title has-text-white is-size-1 has-text-centered">
                         <!-- WRITE HERE: Catch Copy -->
-                        There must be something that only I can do
+                        Never give up, until I win.
                     </p>
                 </div>
             </div>
@@ -78,8 +78,11 @@
             <div id="members">
                 <p class="section-title">members</p>
                 <div class="member-item">
-                    <div class="member"></div>
-                    <div class="member"></div>
+                    <div class="member">
+                        <img src="./assets/ikemen.jpg" alt="ikemen" width="300" height="300">
+                        <p>CEO</p>
+                        <p>三井龍一郎</p>
+                    </div>
                 </div>
             </div>
             <div id="contact">
