add form action

--- a/index.html
+++ b/index.html
@@ -88,22 +88,22 @@
             </div>
             <div id="contact">
                 <p class="section-title">contact us</p>
-                <form action="" class="contact-form">
+                <form action="https://docs.google.com/forms/d/e/1FAIpQLSdtBMb619F6h4bAy_iwY8hjPVjb2C6iwWzqTauWWuQTj0i-OA/formResponse" class="contact-form">
                         <div class="field"><label class="label">Name</label>
-                            <div class="control"><input class="input" type="text" placeholder="例)山田 太郎"></div>
+                            <div class="control"><input class="input" name="entry.61545746" type="text" placeholder="例)山田 太郎"></div>
                         </div>
                         <div class="field"><label class="label">Email</label>
-                            <div class="control has-icons-left has-icons-right"><input class="input" type="email"
-                                    placeholder="例) example@gmail.com"><span class="icon is-small is-left"><i
-                                        class="fas fa-envelope"></i></span><span class="icon is-small is-right"></span>
-                            </div>
+                            <div class="control"><input class="input" type="text" name="emailAddress" placeholder="例) example@gmail.com"></div>
+                        </div>
+                        <div class="field"><label class="label">TEL</label>
+                            <div class="control"><input class="input" name="entry.271887161" type="text" placeholder="例)09012345678"></div>
                         </div>
                         <div class="field"><label class="label">Message</label>
-                            <div class="control"><textarea class="textarea" placeholder="Textarea"></textarea></div>
+                            <div class="control"><textarea class="textarea" placeholder="" name="entry.837925139"></textarea></div>
                         </div>
                         
                         <div class="field is-grouped">
-                            <div class="control"><button class="button is-link">Submit</button></div>
+                            <div class="control"><button class="button is-link" type="submit" name="button">Submit</button></div>
                         </div>
                 </form>
                 
