--- a/index.html
+++ b/index.html
@@ -47,9 +47,13 @@
                 </div>
                 <div class="navbar-end">
                     <div class="navbar-item">
-                        <div class="buttons"><a class="navbar-item" href="#mission">mission</a><a class="navbar-item"
-                                href="#service">service</a><a class="navbar-item" href="#members">members</a><a
-                                class="navbar-item" href="#contact">contact</a></div>
+                        <div class="buttons">
+                            <a class="navbar-item" href="#about-us">about us</a>
+                            <a class="navbar-item" href="#mission">mission</a>
+                            <a class="navbar-item" href="#service">service</a>
+                            <a class="navbar-item" href="#members">members</a>
+                            <a class="navbar-item" href="#contact">contact</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -66,8 +70,28 @@
         </section>
     </div>
     <div class="main">
-        
         <div class="items">
+            <div id="about-us">
+                <p class="section-title">about us</p>
+                <div class="about-items">
+                    <div class="about-item">
+                        <p class="about-title">会社名</p>
+                        <p class="about-info">株式会社Rakam</p>
+                    </div>
+                    <div class="about-item">
+                        <p class="about-title">会社設立日</p>
+                        <p class="about-info">2018年8月24日</p>
+                    </div>
+                    <div class="about-item">
+                        <p class="about-title">代表取締役</p>
+                        <p class="about-info">三井龍一郎</p>
+                    </div>
+                    <div class="about-item">
+                        <p class="about-title">事業内容</p>
+                        <p class="about-info">学生と企業のマッチングサービス</p>
+                    </div>
+                </div>
+            </div>
             <div id="mission">
                 <p class="section-title">mission</p>
                 <p class="slogan"><b>若者の力で日本を熱く</b></p>
